# rustdocmd

./: Cargo.toml  Makefile  README.md  rustdocmd.toml
.github/: copilot-instructions.md
mdbook/: SUMMARY.md  book.toml
mdbook/book/: 404.html  example.html  index.html  install.html  introducing.html  print.html  searchindex.js  toc.html  toc.js
mdbook/src/: SUMMARY.md  example.md  install.md  introducing.md  plugins.md
src/: config.rs  main.rs  parser.rs  writer.rs
tests/: integration.rs  markdown_integration.rs
