[package]
name = "rustdocmd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
mdbook = "0.4.52"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
